EXTRA_DIST = Future-Work.html History.html index.html The-Index.html Installation.html Introduction.html Linux-Installation.html Mac-OSX-Installation.html Sample-Executables.html Understanding-MarSystems-and-Composites.html Users-and-Projects.html Windows--cygwin-.html Windows--Visual-Studio-.html Building-the-dataflow-network.html Writing-your-own-MarSystems.html marsyasArchitecture1.png
 
